--- a/app/page.module.css
+++ b/app/page.module.css
@@ -58,7 +58,7 @@ table.table {
   border-collapse: collapse;
   border-spacing: 0;
   width: 100%;
-  max-width: 30rem;
+  max-width: 56rem;
 }
 table.table th {
   border-bottom: 1px solid #222;
@@ -69,4 +69,10 @@ table.table td,
 table.table th {
   padding: 1rem;
   text-align: center;
+}
+table.table td a {
+  color: #0070f3;
+}
+table.table td a:hover {
+  text-decoration: underline;
 }
